--- a/src/client/package.json
+++ b/src/client/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^14.14.34",
     "@types/react": "^17.0.3",
     "@types/styled-components": "^5.1.8",
+    "classnames": "^2.2.6",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
