--- a/src/client/package.json
+++ b/src/client/package.json
@@ -15,6 +15,7 @@
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "recharts": "^2.0.9",
     "styled-components": "^5.2.1",
     "typescript": "^4.2.3"
   }
