--- a/src/middleware/package.json
+++ b/src/middleware/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "cross-spawn": "^7.0.3",
-    "lowdb": "^1.0.0",
-    "path": "^0.12.7"
+    "express": "^4.17.1",
+    "lowdb": "^1.0.0"
   }
 }
