--- a/src/middleware/package.json
+++ b/src/middleware/package.json
@@ -13,5 +13,14 @@
     "cross-spawn": "^7.0.3",
     "express": "^4.17.1",
     "lowdb": "^1.0.0"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "printWidth": 120,
+    "tabWidth": 2,
+    "endOfLine": "auto",
+    "trailingComma": "none",
+    "quoteProps": "consistent"
   }
 }
