--- a/src/client/package.json
+++ b/src/client/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@types/moment": "^2.13.0",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
